Firebase setup for app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MobileBankingApp</string>
+    <string name="default_web_client_id">634380083220-jhg190uunuj5no2uequ8b2k62n4jdrdt.apps.googleusercontent.com</string>
 </resources>
